--- a/index.css
+++ b/index.css
@@ -3,8 +3,9 @@
 	src: url('kimberley_bl.ttf');
 }
 html { 
-	background: url(Images/BG_1.png) no-repeat center fixed; 
-	background-size: cover;
+  background: url(Images/BG_3.png) left top repeat-y, url(Images/BG_2.png) right bottom repeat-y, url(Images/BG_1.png) no-repeat center fixed;
+  background-size: 275px, 275px, cover;
+  background-transform: rotate(20deg)rotate(20deg)rotate(0deg);
 }
 body {
 	font-family: 'Kimberley', Fallback, sans-serif;
@@ -16,6 +17,9 @@ display: block;
 margin: auto;
 text-align: center
 }
+.divider {
+	margin-top: 5.5em;
+}
 h1 {
 	margin-top: -1em;
 }
@@ -26,7 +30,7 @@ h2 {
 	line-height: 20px;
 }
 h3 {
-	margin-top: -3em;
+	margin-top: -4em;
 }
 h4 {
 	color: white;
@@ -35,7 +39,7 @@ h4 {
 }
 #OSTLogos {
   position: relative;
-  top: .8em;
+  bottom: .5em;
   right: 1.5em;
 }
 .ostlogo {
