--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ html {
 }
 body {
 	font-family: 'Kimberley', Fallback, sans-serif;
+	background-color: transparent;
 }
 .wrapper {
 	height: 100%;
