--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body {
 	width: 1000px;
 	display: block;
 	margin: 0px auto;
-	text-align: center /*lol*/
+	text-align: center
 }
 .divider {
 	margin-top: 2.5em;
