--- a/index.css
+++ b/index.css
@@ -13,6 +13,16 @@ body {
 	font-family: 'Kimberley', Fallback, sans-serif;
 	background-color: transparent;
 }
+a:link {
+	text-decoration: none;
+	color: white;
+}
+a:visited {
+	color: white;
+}
+a:hover {
+	color: #8747ff;
+}
 .wrapper {
 	height: 100%;
 	width: 1000px;
@@ -28,6 +38,7 @@ h1 {
 }
 h2 {
 	margin-top: -.8em;
+	margin-bottom: -3em;
 	color: white;
 	font-size: 40px;
 	line-height: 20px;
@@ -36,12 +47,13 @@ h3 {
 	margin-top: -2em;
 }
 h4 {
+	margin-bottom: 2em;
 	color: white;
 	font-size: 40px;
 	line-height: 20px;
 }
 h5 {
-	margin-top: -4em;
+	margin-top: -8em;
 	text-align: center;
 	color: white;
 	font-size: 18px;
