--- a/index.css
+++ b/index.css
@@ -59,6 +59,19 @@ h5 {
 	font-size: 18px;
 	line-height: 25px;
 }
+
+.bandcamp {
+	margin-top: 0.4em;
+	margin-bottom: -1em;
+}
+
+.streaming {
+	text-align: center;
+	color: white;
+	font-size: 18px;
+	line-height: 25px;
+}
+
 #OSTLogos {
 	position: relative;
 	bottom: .7em;
